--- a/src/components/agentModal/AgentModal.css
+++ b/src/components/agentModal/AgentModal.css
@@ -11,5 +11,5 @@
 .agent-modal-title {
   text-align: center;
   font-size: 2rem;
-  font-family: "firago-bold";
+  font-family: "firago-medium";
 }
