--- a/src/components/categories/Categories.css
+++ b/src/components/categories/Categories.css
@@ -18,7 +18,7 @@
 }
 
 .category-btn span {
-  font-family: "firago-bold";
+  font-family: "firago-medium";
 }
 
 .category-btn:hover {
@@ -38,12 +38,15 @@
 .add-btn {
   background-color: #f93b1d;
   font-size: 1rem;
-  /* padding: 10px 16px !important; */
   border-radius: 10px;
   padding: 10px 16px;
   color: #fff;
   height: 47px;
   width: 230px;
+}
+
+.add-btn span {
+  font-family: "firago-medium";
 }
 
 .add-btn.agent-btn {
@@ -65,7 +68,7 @@
 /* MODAL OPTIONS CSS */
 .options-title {
   font-size: 1rem;
-  font-family: "firago-bold";
+  font-family: "firago-medium";
 }
 
 .options-dropdown {
@@ -108,6 +111,11 @@
 
 .options-btn-wrapper button {
   background-color: #f93b1d;
+  font-family: "firago-medium" !important;
+}
+
+.options-btn-wrapper button span {
+  font-family: "firago-medium";
 }
 
 .options-btn-wrapper button:hover {
@@ -127,7 +135,7 @@
 }
 
 .auto-prices-title {
-  font-family: "firago-bold";
+  font-family: "firago-medium";
   font-size: 0.875rem;
 }
 
